@@ -29,7 +29,7 @@ define clean
 	for vm in vm1 vm2 vm3 vm4 vm5; do \
 		if virsh list | grep $$vm; then \
 			virsh destroy $$vm; \
-			virsh undefine $$vm --checkpoints-metadata; \
+			virsh undefine $$vm --checkpoints-metadata --nvram; \
 		fi \
 	done
 endef
