@@ -13,7 +13,9 @@
   </resource>
   <os>
     <type arch='x86_64' machine='pc-q35-2.10'>hvm</type>
+    <loader readonly='yes' type='pflash'>/tmp/UEFI.fd</loader>
     <boot dev='hd'/>
+    <nvram>/tmp/UEFI_VARS.fd</nvram>
   </os>
   <features>
     <acpi/>
