@@ -19,6 +19,7 @@ import os
 import sys
 import json
 import signal
+import shutil
 import logging
 import argparse
 from argparse import Namespace
@@ -348,6 +349,9 @@ def main():
     args = lib.argparse(parser)
 
     args.stdout = args.output == "-"
+    args.info = Namespace()
+    args.info.loader = None
+    args.info.nvram = None
 
     zipStream = None
     if args.stdout is False:
@@ -444,6 +448,7 @@ def main():
 
     vmConfig = virtClient.getDomainConfig(domObj)
     disks = virtClient.getDomainDisks(args, vmConfig)
+    info = virtClient.getDomainInfo(vmConfig)
 
     if not disks:
         logging.error(
@@ -545,6 +550,9 @@ def main():
     if args.printonly is False:
         configFile = backupConfig(args, vmConfig)
 
+    if info.loader is not None or info.nvram is not None:
+        backupNvram(args, info)
+
     if args.stdout is True and args.printonly is False:
         addFiles(args, configFile, zipStream, logFile)
 
@@ -573,6 +581,13 @@ def addFiles(args, configFile, zipStream, logFile):
     logging.info("Adding backup log to zipfile")
     zipStream.zipStream.write(logFile, logFile)
 
+    if args.info.nvram is not None:
+        logging.info("Adding NVRAM to zipfile")
+        zipStream.zipStream.write(args.info.nvram, args.info.nvram)
+    if args.info.loader is not None:
+        logging.info("Adding Loader to zipfile")
+        zipStream.zipStream.write(args.info.loader, args.info.loader)
+
 
 def backupConfig(args, vmConfig):
     """Save domain config file"""
@@ -589,6 +604,25 @@ def backupConfig(args, vmConfig):
         logging.error("Unable to save VM config: %s", errmsg)
         logging.exception(errmsg)
         sys.exit(1)
+
+
+def backupNvram(args, domainInfo):
+    """Save domain nvram and loader"""
+    ident = args.cpt.name
+    if args.level == "diff":
+        ident = int(time())
+
+    if domainInfo.loader is not None:
+        uefiLoader = f"{args.output}/uefi_loader.{ident}.fd"
+        logging.info("Saving Loader to: [%s]", uefiLoader)
+        shutil.copyfile(domainInfo.loader, uefiLoader)
+        args.info.loader = uefiLoader
+
+    if domainInfo.nvram is not None:
+        uefiNvram = f"{args.output}/uefi_vars.{ident}.fd"
+        logging.info("Saving NVRAM to: [%s]", uefiNvram)
+        shutil.copyfile(domainInfo.nvram, uefiNvram)
+        args.info.nvram = uefiNvram
 
 
 def setMetaContext(args, disk):
